2007-10-17  Neal H. Walfield  <neal@gnu.org>

	* ChangeLog: New file.
	* Makefile.am: Likewise.
	* bit-array.h: Likewise.
	* headers.m4: Likewise.
	* t-bit-array.c: Likewise.
